fix: added user already exixst control & sm animations

--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -25,7 +25,7 @@
  <span class="badge bg-secondary rounded-pill">{{carrello.length}}</span></h4>
  <div class="px-4 py-5 my-5 text-center">
   <img style="animation: tada; animation-duration: 2s;" class="d-block mx-auto mb-4" src="https://cdn-icons-png.flaticon.com/512/2038/2038854.png" alt="" width="50" height="50">
-  <h5 class=" fw-bold">IL carrello è vuoto! </h5>
+  <h5 class=" fw-bold">Il carrello è vuoto! </h5>
   <div class="col-lg-6 mx-auto">
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       <button type="button" class="btn btn-outline-secondary px-4" (click)="onTornaAProdotti()">Scopri i Prodotti</button>
