--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="px-4 pt-5 my-1 text-center border-bottom">
-  <h1 class="display-4 fw-bold">Integrazione sportiva di alta qualità </h1>
+  <h1 style="animation: pulse; animation-duration: 1s;" class="display-4 fw-bold">Integrazione sportiva di alta qualità </h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">SupplyDreams è un store che unisce prodotti delle più grandi multinazionali di
       integrazione sportiva (Prozis, MyProtein, BulkPowders) a prezzi stracciati. scopri i nostri
