--- a/src/app/prodotti/prodotti.component.html
+++ b/src/app/prodotti/prodotti.component.html
@@ -7,7 +7,7 @@
 <br><br>
 
 <div class="card-group justify-content-center bg-light phone">
-<div *ngFor="let prod of prodotti | filtraArray:ricerca:'categoria'" class="card-group justify-content-center">
+<div *ngFor="let prod of prodotti | filtraArray:ricerca:'nome'" class="card-group justify-content-center">
  <div style="animation: fadeIn; animation-duration: 1s; " class="card design carddesign">
   <button class="btn" style="padding:none; margin:none; border: none;"><img [routerLink]="['/prodotti', prod.slug]" src="{{prod.foto}}" class="card-img-top" alt="..." width="250">
   </button>
